Updated touch icon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html>
   <head>
     <title>Visa Travel Buddy</title>
-    <meta name="viewport" content="initial-scale=1.0">
+    <!-- Fix Viewport on mobile devices -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Homescreen icon for web app -->
+  <link rel="apple-touch-icon" href="//assets.decoded.com/images/visa-touch-icon.png">
+  <link rel="icon" sizes="296x296" href="//assets.decoded.com/images/visa-touch-icon.png">
+  <!-- Fullscreen Mode for web app -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
+
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
